feat: ListValue support getFirst